// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangelogProcessor4AttachAuthor update changelog with author default 1`] = `
"
## [0.2.4](https://github.com/speedy/mono/compare/v0.2.3...v0.2.4) (2021-10-23)


### Bug Fixes

* \`--ignore-scripts\` description ([aaaaaaa](https://github.com/speedy/mono/commits/663a3963b63706d273068895f4dd79d6c70472c2)) [@<name>](https://github.com/<emailName>)



## [0.2.3](https://github.com/speedy/mono/compare/v0.2.2...v0.2.3) (2021-10-20)


### Bug Fixes

* The \\"path\\" argument must be of type string. Received undefined ([bbbbbbb](https://github.com/speedy/mono/commits/1a377bb70193547e2cf9faaa288fbf5fcdc4b66f)) [@<name>](https://github.com/<emailName>)
  "
`;

exports[`ChangelogProcessor4AttachAuthor update changelog with author options - displayType 1`] = `
"
## [0.2.4](https://github.com/speedy/mono/compare/v0.2.3...v0.2.4) (2021-10-23)


### Bug Fixes

* \`--ignore-scripts\` description ([aaaaaaa](https://github.com/speedy/mono/commits/663a3963b63706d273068895f4dd79d6c70472c2)) [@<emailName>](https://github.com/<emailName>)



## [0.2.3](https://github.com/speedy/mono/compare/v0.2.2...v0.2.3) (2021-10-20)


### Bug Fixes

* The \\"path\\" argument must be of type string. Received undefined ([bbbbbbb](https://github.com/speedy/mono/commits/1a377bb70193547e2cf9faaa288fbf5fcdc4b66f)) [@<name>](https://github.com/<emailName>)
  "
`;

exports[`ChangelogProcessor4AttachAuthor update changelog with author options - getAuthorPage 1`] = `
"
## [0.2.4](https://github.com/speedy/mono/compare/v0.2.3...v0.2.4) (2021-10-23)


### Bug Fixes

* \`--ignore-scripts\` description ([aaaaaaa](https://github.com/speedy/mono/commits/663a3963b63706d273068895f4dd79d6c70472c2)) [@<name>](/page/to/author/<emailName>)



## [0.2.3](https://github.com/speedy/mono/compare/v0.2.2...v0.2.3) (2021-10-20)


### Bug Fixes

* The \\"path\\" argument must be of type string. Received undefined ([bbbbbbb](https://github.com/speedy/mono/commits/1a377bb70193547e2cf9faaa288fbf5fcdc4b66f)) [@<name>](https://github.com/<emailName>)
  "
`;

exports[`ChangelogProcessor4AttachAuthor update changelog without author default 1`] = `
"
## [0.2.4](https://github.com/speedy/mono/compare/v0.2.3...v0.2.4) (2021-10-23)


### Bug Fixes

* \`--ignore-scripts\` description ([aaaaaaa](https://github.com/speedy/mono/commits/663a3963b63706d273068895f4dd79d6c70472c2)) [@<name>](https://github.com/<emailName>)



## [0.2.3](https://github.com/speedy/mono/compare/v0.2.2...v0.2.3) (2021-10-20)


### Bug Fixes

* The \\"path\\" argument must be of type string. Received undefined ([bbbbbbb](https://github.com/speedy/mono/commits/1a377bb70193547e2cf9faaa288fbf5fcdc4b66f)) [@<name>](https://github.com/<emailName>)
  "
`;

exports[`ChangelogProcessor4AttachAuthor update changelog without author options - displayType 1`] = `
"
## [0.2.4](https://github.com/speedy/mono/compare/v0.2.3...v0.2.4) (2021-10-23)


### Bug Fixes

* \`--ignore-scripts\` description ([aaaaaaa](https://github.com/speedy/mono/commits/663a3963b63706d273068895f4dd79d6c70472c2)) [@<emailName>](https://github.com/<emailName>)



## [0.2.3](https://github.com/speedy/mono/compare/v0.2.2...v0.2.3) (2021-10-20)


### Bug Fixes

* The \\"path\\" argument must be of type string. Received undefined ([bbbbbbb](https://github.com/speedy/mono/commits/1a377bb70193547e2cf9faaa288fbf5fcdc4b66f)) [@<emailName>](https://github.com/<emailName>)
  "
`;

exports[`ChangelogProcessor4AttachAuthor update changelog without author options - getAuthorPage 1`] = `
"
## [0.2.4](https://github.com/speedy/mono/compare/v0.2.3...v0.2.4) (2021-10-23)


### Bug Fixes

* \`--ignore-scripts\` description ([aaaaaaa](https://github.com/speedy/mono/commits/663a3963b63706d273068895f4dd79d6c70472c2)) [@<name>](/page/to/author/<emailName>)



## [0.2.3](https://github.com/speedy/mono/compare/v0.2.2...v0.2.3) (2021-10-20)


### Bug Fixes

* The \\"path\\" argument must be of type string. Received undefined ([bbbbbbb](https://github.com/speedy/mono/commits/1a377bb70193547e2cf9faaa288fbf5fcdc4b66f)) [@<name>](/page/to/author/<emailName>)
  "
`;
